devops/demoapp/demoapp-weather/kustomize/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: ${SERVICE}
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: ${SERVICE}
              servicePort: 80
            path: /${SERVICE}(/|$)(.*)
